--- a/clothing-store/index.html
+++ b/clothing-store/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/favicon-32x32.png" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LENION</title>
-    <link rel="stylesheet" href="./dist/styles.css" />
+    <link rel="stylesheet" href="./src/stylesCSS/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
